crates/parser/tests/parser/snapshots/main__parser__fixtures__multi_param_constraint.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - Import:
      platform: ~
      is_pub: false
      path: core/monoid
      names:
        - name: Monoid
          alias: ~
      span:
        - 13
        - 40
  - DefFn:
      platform: ~
      name: convert_first
      visibility: Private
      type_params:
        - name: a
          arity: 0
          span:
            - 94
            - 95
        - name: b
          arity: 0
          span:
            - 97
            - 98
      params:
        - name: x
          ty:
            Var:
              name: a
              span:
                - 103
                - 104
          mode: Consume
          span:
            - 100
            - 104
      constraints:
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 117
                  - 118
            - Var:
                name: b
                span:
                  - 128
                  - 129
          span:
            - 117
            - 130
      return_type:
        Var:
          name: b
          span:
            - 109
            - 110
      body:
        App:
          func:
            Var:
              name: convert
              span:
                - 135
                - 142
          args:
            - Var:
                name: x
                span:
                  - 143
                  - 144
          is_ufcs: false
          span:
            - 135
            - 145
      doc: ~
      span:
        - 76
        - 145
  - DefFn:
      platform: ~
      name: convert_second
      visibility: Private
      type_params:
        - name: a
          arity: 0
          span:
            - 210
            - 211
        - name: b
          arity: 0
          span:
            - 213
            - 214
      params:
        - name: x
          ty:
            Var:
              name: a
              span:
                - 219
                - 220
          mode: Consume
          span:
            - 216
            - 220
      constraints:
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 241
                  - 242
            - Var:
                name: b
                span:
                  - 244
                  - 245
          span:
            - 233
            - 246
      return_type:
        Var:
          name: b
          span:
            - 225
            - 226
      body:
        App:
          func:
            Var:
              name: convert
              span:
                - 251
                - 258
          args:
            - Var:
                name: x
                span:
                  - 259
                  - 260
          is_ufcs: false
          span:
            - 251
            - 261
      doc: ~
      span:
        - 191
        - 261
  - DefFn:
      platform: ~
      name: convert_concrete
      visibility: Private
      type_params:
        - name: b
          arity: 0
          span:
            - 334
            - 335
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 340
                - 343
          mode: Consume
          span:
            - 337
            - 343
      constraints:
        - trait_name: Convert
          type_args:
            - Named:
                name: Int
                span:
                  - 364
                  - 367
            - Var:
                name: b
                span:
                  - 369
                  - 370
          span:
            - 356
            - 371
      return_type:
        Var:
          name: b
          span:
            - 348
            - 349
      body:
        App:
          func:
            Var:
              name: convert
              span:
                - 376
                - 383
          args:
            - Var:
                name: x
                span:
                  - 384
                  - 385
          is_ufcs: false
          span:
            - 376
            - 386
      doc: ~
      span:
        - 313
        - 386
  - DefFn:
      platform: ~
      name: process
      visibility: Private
      type_params:
        - name: a
          arity: 0
          span:
            - 517
            - 518
        - name: b
          arity: 0
          span:
            - 520
            - 521
      params:
        - name: x
          ty:
            Var:
              name: a
              span:
                - 526
                - 527
          mode: Consume
          span:
            - 523
            - 527
      constraints:
        - trait_name: Eq
          type_args:
            - Var:
                name: a
                span:
                  - 547
                  - 548
          span:
            - 547
            - 565
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 547
                  - 548
            - Var:
                name: b
                span:
                  - 563
                  - 564
          span:
            - 547
            - 565
        - trait_name: Show
          type_args:
            - Var:
                name: b
                span:
                  - 567
                  - 568
          span:
            - 567
            - 580
        - trait_name: Ord
          type_args:
            - Var:
                name: b
                span:
                  - 567
                  - 568
          span:
            - 567
            - 580
      return_type:
        Named:
          name: String
          span:
            - 532
            - 538
      body:
        App:
          func:
            Var:
              name: show
              span:
                - 585
                - 589
          args:
            - App:
                func:
                  Var:
                    name: convert
                    span:
                      - 590
                      - 597
                args:
                  - Var:
                      name: x
                      span:
                        - 598
                        - 599
                is_ufcs: false
                span:
                  - 590
                  - 600
          is_ufcs: false
          span:
            - 585
            - 601
      doc: ~
      span:
        - 505
        - 601
  - DefTrait:
      platform: ~
      visibility: Private
      name: Codec
      type_params:
        - name: a
          arity: 0
          span:
            - 676
            - 677
        - name: b
          arity: 0
          span:
            - 679
            - 680
      superclasses:
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 688
                  - 689
            - Var:
                name: b
                span:
                  - 699
                  - 700
          span:
            - 688
            - 701
      methods:
        - platform: ~
          name: decode
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                Var:
                  name: b
                  span:
                    - 720
                    - 721
              mode: Consume
              span:
                - 717
                - 721
          constraints: []
          return_type:
            Var:
              name: a
              span:
                - 726
                - 727
          body:
            Lit:
              value: Unit
              span:
                - 706
                - 727
          doc: ~
          span:
            - 706
            - 727
      doc: ~
      span:
        - 664
        - 729
  - DefTrait:
      platform: ~
      visibility: Private
      name: Codec2
      type_params:
        - name: a
          arity: 0
          span:
            - 784
            - 785
        - name: b
          arity: 0
          span:
            - 787
            - 788
      superclasses:
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 796
                  - 797
            - Var:
                name: b
                span:
                  - 807
                  - 808
          span:
            - 796
            - 809
        - trait_name: Monoid
          type_args:
            - Var:
                name: b
                span:
                  - 811
                  - 812
          span:
            - 811
            - 820
      methods:
        - platform: ~
          name: decode
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                Var:
                  name: b
                  span:
                    - 839
                    - 840
              mode: Consume
              span:
                - 836
                - 840
          constraints: []
          return_type:
            Var:
              name: a
              span:
                - 845
                - 846
          body:
            Lit:
              value: Unit
              span:
                - 825
                - 846
          doc: ~
          span:
            - 825
            - 846
      doc: ~
      span:
        - 771
        - 848
  - DefTrait:
      platform: ~
      visibility: Private
      name: Tern
      type_params:
        - name: a
          arity: 0
          span:
            - 914
            - 915
        - name: b
          arity: 0
          span:
            - 917
            - 918
        - name: c
          arity: 0
          span:
            - 920
            - 921
      superclasses:
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 937
                  - 938
            - Var:
                name: b
                span:
                  - 940
                  - 941
          span:
            - 929
            - 942
      methods:
        - platform: ~
          name: tern
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                Var:
                  name: a
                  span:
                    - 959
                    - 960
              mode: Consume
              span:
                - 956
                - 960
            - name: y
              ty:
                Var:
                  name: b
                  span:
                    - 965
                    - 966
              mode: Consume
              span:
                - 962
                - 966
          constraints: []
          return_type:
            Var:
              name: c
              span:
                - 971
                - 972
          body:
            Lit:
              value: Unit
              span:
                - 947
                - 972
          doc: ~
          span:
            - 947
            - 972
      doc: ~
      span:
        - 903
        - 974
  - DefImpl:
      platform: ~
      trait_name: Convert
      type_args:
        - App:
            name: Pair
            args:
              - Var:
                  name: a
                  span:
                    - 1051
                    - 1052
              - Var:
                  name: b
                  span:
                    - 1054
                    - 1055
            span:
              - 1046
              - 1056
        - Named:
            name: String
            span:
              - 1058
              - 1064
      type_params:
        - name: a
          arity: 0
          span:
            - 1032
            - 1033
        - name: b
          arity: 0
          span:
            - 1035
            - 1036
      type_constraints:
        - trait_name: Show
          type_args:
            - Var:
                name: a
                span:
                  - 1072
                  - 1073
          span:
            - 1072
            - 1092
        - trait_name: Convert
          type_args:
            - Var:
                name: a
                span:
                  - 1072
                  - 1073
            - Var:
                name: b
                span:
                  - 1090
                  - 1091
          span:
            - 1072
            - 1092
      methods:
        - platform: ~
          name: convert
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                App:
                  name: Pair
                  args:
                    - Var:
                        name: a
                        span:
                          - 1117
                          - 1118
                    - Var:
                        name: b
                        span:
                          - 1120
                          - 1121
                  span:
                    - 1112
                    - 1122
              mode: Consume
              span:
                - 1109
                - 1122
          constraints: []
          return_type:
            Named:
              name: String
              span:
                - 1127
                - 1133
          body:
            App:
              func:
                Var:
                  name: show
                  span:
                    - 1136
                    - 1140
              args:
                - Var:
                    name: x
                    span:
                      - 1141
                      - 1142
              is_ufcs: false
              span:
                - 1136
                - 1143
          doc: ~
          span:
            - 1097
            - 1143
      doc: ~
      span:
        - 1027
        - 1145
