crates/parser/tests/parser/snapshots/main__parser__fixtures__pub_import.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - Import:
      platform: ~
      is_pub: true
      path: core/option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 13
        - 56
  - Import:
      platform: ~
      is_pub: true
      path: core/result
      names:
        - name: Result
          alias: ~
      span:
        - 57
        - 88
