crates/parser/tests/parser/snapshots/main__parser__fixtures__shared_parse_error.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: test
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 27
            - 30
      body:
        Do:
          exprs:
            - Let:
                name: shared
                ty: ~
                value:
                  Lit:
                    value:
                      Int: 42
                    span:
                      - 52
                      - 54
                body: ~
                span:
                  - 39
                  - 54
            - Var:
                name: shared
                span:
                  - 59
                  - 65
          span:
            - 33
            - 67
      doc: ~
      span:
        - 13
        - 67
