crates/parser/tests/parser/snapshots/main__parser__fixtures__type_record.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 35
                    - 38
            - - y
              - Named:
                  name: Int
                  span:
                    - 47
                    - 50
      deriving: []
      doc: ~
      span:
        - 13
        - 53
  - DefFn:
      platform: ~
      name: origin
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Point
          span:
            - 70
            - 75
      body:
        StructLit:
          name: Point
          fields:
            - - x
              - Lit:
                  value:
                    Int: 0
                  span:
                    - 90
                    - 91
            - - y
              - Lit:
                  value:
                    Int: 0
                  span:
                    - 97
                    - 98
          span:
            - 78
            - 100
      doc: ~
      span:
        - 54
        - 100
